syntax = "proto3";

package auth;

service AuthService {
  // Token Validation - Chat service will use this
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message ValidateTokenResponse {
  string userId = 1;
  string email = 2;
  string role = 3;
  int64 issuedAt = 4;
  int64 expiresAt = 5;
}
