syntax = "proto3";

package chat;

service ChatService {
  // ------ Private Chat ------
  rpc SendPrivateMessage (PrivateMessageRequest) returns (ChatMessageResponse);
  rpc GetPrivateChatHistory (PrivateChatHistoryRequest) returns (ChatMessagesResponse);

  // ------ Group Chat ------
  rpc CreateGroup (CreateGroupRequest) returns (GroupResponse);
  rpc AddGroupMember (GroupMemberRequest) returns (GroupResponse);
  rpc RemoveGroupMember (GroupMemberRequest) returns (GroupResponse);
  rpc SendGroupMessage (GroupMessageRequest) returns (ChatMessageResponse);
  rpc GetGroupChatHistory (GroupChatHistoryRequest) returns (ChatMessagesResponse);
}

// ---------- Private Chat ----------
message PrivateMessageRequest {
  string senderId = 1;
  string receiverId = 2;
  string content = 3;
}

message PrivateChatHistoryRequest {
  string userId1 = 1;
  string userId2 = 2;
}

// ---------- Group Chat ----------
message CreateGroupRequest {
  string groupName = 1;
  string creatorId = 2;
  repeated string memberIds = 3;
}

message GroupMemberRequest {
  string groupId = 1;
  string userId = 2;
}

message GroupMessageRequest {
  string groupId = 1;
  string senderId = 2;
  string content = 3;
}

message GroupChatHistoryRequest {
  string groupId = 1;
}

// ---------- Shared ----------
message ChatMessageResponse {
  string messageId = 1;
  string senderId = 2;
  string content = 3;
  string timestamp = 4;
}

message ChatMessagesResponse {
  repeated ChatMessageResponse messages = 1;
}

message GroupResponse {
  string groupId = 1;
  string groupName = 2;
  repeated string memberIds = 3;
  string createdAt = 4;
}
